# blackholespam

./: AUTHORS  ChangeLog  INSTALL  MCONFIG  Makefile  Makefile-no-automake  Makefile.am  Makefile.in  NEWS  QUEUE_INSTALL  README.md  README.spamc  Setup  TODO  _README_  blackhole.c  blackhole.h  body_patterns.h  buildconf  checkascii128.c  checkattach.c  checkbademail.c  checkbadrelay.c  checkbody.c  checkcharset.c  checkctype.c  checkdns.c  checkencoding.c  checkexcluded.c  checkgoodemail.c  checkgoodrelay.c  checkheader.c  checkmyemail.c  checkmyrelay.c  checkreverse.c  cmb.c  config.h  config.h.in  configure  configure.in  (+30 more)
SMTP_DEMON/: Makefile-no-automake  Makefile.am  Makefile.in  README  demon.c  demon.init  demon.whois  startup_rules
autom4te.cache/: output.0  traces.0
byz_scripts/: README  byz_checker.pl  byz_compare.pl  byz_parse.pl  dbmmanage
doc/: Makefile.am  Makefile.in  bhconf.1  bhinstall.1  blackhole.1  blackhole.sgml  dot_blackhole.5
etc/: Makefile.am  Makefile.in  dot-blackhole.temp  dot-muttrc-spam  dot-muttrc-virus
interfaces/console/: README
report_programs/spamcomplain/: Makefile  README  spamcomplain.1  spamcomplain.c
ripmime/: CHANGELOG  CONTRIBUTORS  INSTALL  LICENSE  MIME_headers.c  MIME_headers.h  MIME_headers_api.h  Makefile  Makefile.am  Makefile.in  Makefile.orig  README  TODO  XAM_strtok.c  XAM_strtok.h  build_tnef  ffget.c  ffget.h  logger.c  logger.h  mime.c  mime.h  rawget.c  rawget.h  ripmime.c  strlower.c  strlower.h  zstr.c  zstr.h
ripmime/tnef/: Makefile  Makefile-no-automake  Makefile.am  Makefile.in  config.h  mapidefs.h  mapitags.h  ms-tnef.out  tnef.c  tnef.h  tnef_api.h
sav_if/: compute.h  savitype.h  sophtype.h
scripts/: Makefile-no-automake  Makefile.am  Makefile.in  bad_word_list  bhconf  bhedit  bhinstall  bhtest  blackhole_table.sql  indent.sh  insert.sql  parse_assassin_rules.pl  parse_bad_wordlist.pl  qmail-queue.c  qmail-queue.sh  sophos_update_ides.sh  spam  upgrade-log.sql  virus
