EXTRA_DIST = Makefile-no-automake \
        README \
        demon.c \
        demon.init \
        demon.whois \
        startup_rules

bin_PROGRAMS = demon

install-am:
	echo "copy demon.init somewhere and startup by running it"
	echo "you probably want to edit it and change the default command"
	echo "line arguments, read the README file too."

