SUBDIRS = tnef

noinst_LIBRARIES = libripmime.a

libripmime_a_LIBADD = tnef/tnef.o

libripmime_a_SOURCES = \
MIME_headers.c \
MIME_headers.h \
MIME_headers_api.h \
XAM_strtok.c \
XAM_strtok.h \
ffget.c \
ffget.h \
logger.c \
logger.h \
mime.c \
mime.h \
rawget.c \
rawget.h \
ripmime.c \
strlower.c \
strlower.h \
zstr.c \
zstr.h

EXTRA_DIST = \
CHANGELOG \
CONTRIBUTORS \
INSTALL \
LICENSE \
README \
TODO
